# apex-node

./: .gitignore  .gitmodules  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  publish-prebuilds.yml
binding/: CMakeLists.txt
binding/src/: addon.cpp  options.cpp  options.h
lib/: index.d.ts  index.js  load-native.js
scripts/: build.js  package-prebuild.js
test/: convert.test.js  load-native.test.js  options-behavior.test.js  options-validation.test.js
